# swagger.json
@@ -276,6 +276,19 @@
           }
         }
       }
+    },
+    "/users/logout": {
+      "post": {
+        "tags": ["User"],
+        "summary": "Logout",
+        "operationId": "logout",
+
+        "responses": {
+          "200": {
+            "description": "Logout successfully"
+          }
+        }
+      }
     }
   },
 
@@ -285,6 +298,15 @@
         "type": "http",
         "scheme": "bearer",
         "bearerFormat": "JWT"
+      },
+      "googleAuth": {
+        "type": "oauth2",
+        "authorizationUrl": "https://accounts.google.com/o/oauth2/auth",
+        "flow": "implicit",
+        "scopes": {
+          "profile": "Access to user profile information",
+          "email": "Access to user email information"
+        }
       }
     },
     "User": {
